<resources>
    <string name="app_name">Mymemo</string>
    <string name="title">备忘录</string>
    <string name="username">用户名：</string>
    <string name="password">密  码：</string>
    <string name="usernameHint">请输入用户名</string>
    <string name="passwordHint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="confirmPassword">确认密码：</string>
    <string name="confirmPasswordHint">再次输入密码</string>
    <string name="createItem">新建</string>
    <string name="checkSave">保存密码</string>
    <string name="recycle">最近删除</string>
    <string name="back">退出</string>
</resources>