<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="359dp"
        app:layout_constraintEnd_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginEnd="-50dp"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="491dp"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/username"
        app:layout_constraintTop_toTopOf="@id/username" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/username"
        app:layout_constraintTop_toTopOf="@id/password" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/login"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="559dp"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintStart_toStartOf="@id/password"
        android:layout_marginTop="70dp"
        android:layout_marginStart="30dp"
        android:onClick="handleLogin"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/register"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="538dp"
        app:layout_constraintTop_toTopOf="@id/loginButton"
        app:layout_constraintStart_toEndOf="@id/loginButton"
        android:layout_marginStart="60dp"
        android:onClick="handleRegister"/>

    <CheckBox
        android:id="@+id/checkSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkSave"
        tools:layout_editor_absoluteX="259dp"
        tools:layout_editor_absoluteY="486dp"
        app:layout_constraintTop_toBottomOf="@id/passwordText"
        app:layout_constraintEnd_toEndOf="@id/passwordText" />


</androidx.constraintlayout.widget.ConstraintLayout>