<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <TextView
        android:id="@+id/registerUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="359dp"
        app:layout_constraintEnd_toStartOf="@id/registerTitle"
        app:layout_constraintTop_toBottomOf="@id/registerTitle"
        android:layout_marginEnd="-50dp"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/registerPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="491dp"
        app:layout_constraintStart_toStartOf="@id/registerUsername"
        app:layout_constraintTop_toBottomOf="@id/registerUsername"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPassword"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="491dp"
        app:layout_constraintStart_toStartOf="@id/registerUsername"
        app:layout_constraintTop_toBottomOf="@id/registerPassword"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/registerUsernameText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/registerUsername"
        app:layout_constraintTop_toTopOf="@id/registerUsername" />

    <EditText
        android:id="@+id/registerPasswordText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/registerUsername"
        app:layout_constraintTop_toTopOf="@id/registerPassword" />

    <EditText
        android:id="@+id/confirmPasswordText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/registerUsername"
        app:layout_constraintTop_toTopOf="@id/confirmPassword"
        android:layout_marginStart="0sp"/>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/register"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="538dp"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordText"
        app:layout_constraintStart_toEndOf="@id/confirmPassword"
        android:layout_marginStart="0dp"
        android:layout_marginTop="30dp"
        android:onClick="submitRegister"/>

</androidx.constraintlayout.widget.ConstraintLayout>